# HDK-Triangulations-On-The-Sphere

./: CMakeLists.txt  CMakePresets.json  README.md  SOP_Trianglations_Sphere_Verb.hpp  SOP_Triangulations_Sphere.cpp  SOP_Triangulations_Sphere.hpp  SOP_Triangulations_Sphere_Info.hpp
src/: SOP_Triangulations_On_The_Sphere.cpp  SOP_Triangulations_On_The_Sphere.hpp  SOP_Triangulations_On_The_Sphere_Info.hpp  SOP_Triangulations_On_The_Sphere_Verb.hpp
